client/css/styles.scss
#leaflet-map {
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
}

body {
  position: relative;
  height: 100%;
  width: 100%;
  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial,
    sans-serif, "Apple Color Emoji", "Segoe UI Emoji";
}

html {
  height: 100%;
  width: 100%;

  &,
  .leaflet-container {
    background-color: #222 !important;
  }
}

.leaflet-control-zoom {
  margin-top: 12px !important;
  margin-left: 12px !important;
}

.overlay {
  padding: 8px;
  background-color: #00000066;
  backdrop-filter: blur(3px);
  z-index: 2000;
  text-shadow: 0 0 2px #000;
  color: white;
  position: absolute;
  font-size: 14px;
  min-width: 200px;
  border: 1px solid #888;

  a {
    color: white;
  }
}

#navigation {
  min-width: unset;
  bottom: 0;
  left: 0;
  display: flex;
  align-items: center;
  gap: 12px;

  .navLinks {
    display: flex;
    gap: 4px;
    flex-wrap: wrap;

    .navHeading {
      font-size: 14px;
      font-weight: normal;
      margin: 0;
      margin-right: 4px;
    }

    #site-link {
      text-decoration: none;
    }
  }

  #nav-spacer {
    width: 1px;
    align-self: stretch;
    border-right: 1px solid #888;
  }
}

#inputsWrapper {
  max-height: calc(100% - 52px);
  overflow-y: auto;

  top: 0;
  right: 0;
  width: 170px;
  display: flex;
  flex-direction: column;
  gap: 12px;

  .shortcutHint {
    text-decoration: underline;
  }

  .inputSeparator {
    height: 1px;
    border-bottom: 1px solid white;
    opacity: 0.3;
  }

  .checkboxWrapper {
    display: flex;
    align-items: center;
    gap: 4px;
  }

  .shortcutWrapper {
    display: flex;
    flex-direction: column;
    gap: 4px;

    > * {
      align-self: flex-start;
    }

    .macShortcut {
      display: none;
    }
  }

  .iterationButtons {
    display: inline-flex;
    gap: 8px;
    margin-top: -12px;
    margin-left: auto;
    margin-right: 80px;
    transform: translateX(100%);
  }

  #shareLink {
    margin: 0 auto;
    margin-top: -4px;
    margin-bottom: 4px;
  }
}

.inputWrapper {
  display: flex;
  align-items: center;
  justify-content: space-between;
  flex-wrap: wrap;
  gap: 6px;

  > * {
    display: block;
  }

  > input {
    width: 80px;
  }

  > select,
  option {
    width: 100%;
  }
}

button.underlineButton {
  background: none;
  border: none;
  color: white;
  text-decoration: underline;
}

#attribution {
  position: absolute;
  bottom: 8px;
  right: 8px;
  z-index: 2000;
  display: inline-block;
}

#save-image-modal {
  padding: 12px;

  form {
    display: flex;
    flex-direction: column;
    gap: 12px;

    .submitOrCancel {
      display: flex;
      align-items: center;
      gap: 8px;
      justify-content: flex-end;

      button[type="submit"] {
        flex-grow: 1;
      }
    }
  }
}

code {
  color: #eee;
  background-color: #333;
  padding: 4px 4px;
  overflow: hidden;
  display: inline-block;
}

button,
input,
select {
  border: none;
  padding: 2px;
  background-color: white;
  color: black;

  &:not(:disabled)hover {
    opacity: 0.9;
  }

  &:disabled {
    opacity: 0.7;
  }
}

button,
select,
input[type="checkbox"] {
  cursor: pointer;
}

input[type="text"] {
  cursor: text;
}

button#exit-full-screen {
  display: none;
}

@media (max-width: 800px) {
  .mobileHidden {
    display: none !important;
  }
  .overlay {
    &,
    * {
      font-size: 16px !important;
    }
  }

  .navHeading {
    font-size: 16px;
  }
}

@media (max-width: 1000px) {
  #navigation {
    flex-direction: column;
    align-items: flex-start;

    #nav-spacer {
      display: none;
    }
  }
}

@media (min-width: 801px) {
  body.hideOverlays {
    #inputsWrapper > *:not(#hide-show-controls) {
      display: none !important;
    }

    #attribution {
      display: none;
    }

    #navigation {
      display: none;
    }

    .leaflet-control-zoom {
      display: none;
    }
  }
}

// Blog styles below

.blogPostRoot {
  background: #1a022e url("https://mandelbrot.site/static/blog-background.png")
    center / cover fixed !important;

  .blogPost {
    display: flex;
    gap: 12px;
    text-shadow: 0 0 2px #000;
    color: white;
    font-size: 16px;

    a {
      color: white;
    }

    nav {
      border-right: 1px solid #888;
      background-color: rgba(0, 0, 0, 0.2);
      padding: 16px 24px;

      ul {
        list-style: none;
        padding: 0;
        margin: 0;

        li.github {
          padding-top: 24px;
          display: flex;
          justify-content: center;

          > * {
            text-shadow: none !important;
          }
        }

        li.topics {
          padding-top: 24px;
        }

        li {
          line-height: 1.4;
          padding: 12px 0;

          .siteName {
            line-height: 1.4;
            padding: 0;
            margin: 0;
          }
        }
      }
    }

    main {
      padding: 36px 16px 0;
      flex-grow: 1;
      max-height: 100vh;
      overflow-y: auto;

      .blogContent {
        max-width: 800px;
        margin: 0 auto;

        h1 {
          line-height: 2;
        }

        p,
        li {
          line-height: 1.4;
        }

        li:not(:last-child) {
          margin-bottom: 8px;
        }

        code {
          display: inline;
          padding: 2px 4px;
        }

        .bottomSpacer {
          height: 36px;
        }
      }
    }
  }
}

@media (max-width: 800px) {
  .blogPostRoot {
    .blogPost {
      display: block;

      nav {
        border-right: none;
        border-bottom: 1px solid #888;
      }

      main {
        overflow-y: visible !important;
        max-height: unset !important;
      }
    }
  }
}

